2008-07-28  Steve Langasek <vorlon@debian.org>

	* libpamc/test/regress/test.libpamc.c: use standard u_int8_t
	type instead of __u8, as elsewhere.
	Patch from Roger Leigh <rleigh@debian.org>.

2008-07-27  Steve Langasek <vorlon@debian.org>

	* modules/pam_*/pam_*.8.xml: fix up the references to pam.d,
	which is in manpage section 5, not 8.
	* modules/pam_env/environment, modules/pam_env/pam_env.8.xml:
	spelling fix, seperate -> separate

2008-07-26  Steve Langasek <vorlon@debian.org>

	* modules/pam_env/pam_env.c: Fix module to skip over
	non-alphanumeric variable names, and to handle the case when
	asked to delete a non-existent variable.

2008-07-13  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_mail/pam_mail.8.xml: Module supports session and
	not account service (#1980773).

2008-07-11  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_unix/pam_unix_acct.c (_unix_run_verify_binary): Do
	not close the pipe descriptor in borderline case (#2009766).
	* modules/pam_unix/pam_unix_passwd.c (_unix_run_update_binary):
	Likewise.
	* modules/pam_unix/support.c (_unix_run_helper_binary): Likewise.
	* modules/pam_unix/support.h: Define upper limit of fds we will
	attempt to close.

	* modules/pam_selinux/pam_selinux.c (config_context): Do not
	ask for the level if use_current_range is set.
	(context_from_env): New function to obtain the context from
	PAM environment variables.
	(pam_sm_open_session): Call context_from_env() if env_params option
	is present. use_current_range now modifies behavior of the
	context_from_env and config_context options.
	* modules/pam_selinux/pam_selinux.8.xml: Describe the env_params
	option. Adjust description of use_current_range option.

2008-07-09  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_exec/pam_exec.c (call_exec): Move all variable
	declaration to begin of a block (#1976310).

	* xtests/tst-pam_group1.c (run_test): Move no_grps declaration
	to begin of function (#1976310).

	* modules/pam_securetty/pam_securetty.8.xml: Replace