@@ -33,9 +33,15 @@ lock_pwdf(void);
 void
 unlock_pwdf(void);
 
+#ifdef HELPER_COMPILE
 int
 save_old_password(const char *forwho, const char *oldpass,
 		  int howmany);
+#else
+int
+save_old_password(pam_handle_t *pamh, const char *forwho, const char *oldpass,
+		  int howmany);
+#endif
 
 #ifdef HELPER_COMPILE
 void
